--- a/my-app/src/styles/Contact.css
+++ b/my-app/src/styles/Contact.css
@@ -60,20 +60,29 @@
   outline: none;
 }
 
-.submit-btn {
-  background-color: #ffcc00;
-  color: #fff;
-  padding: 10px 20px;
+
+button[type="submit"] {
+  background-color: #FFD700; 
+  color: #fff; 
   border: none;
-  border-radius: 5px;
-  font-size: 18px;
+  padding: 5px 15px; 
+  font-size: 14px; 
   cursor: pointer;
-  transition: background-color 0.3s;
+  border-radius: 4px; 
+  width: 70px; 
+  height: 40px; 
+  box-sizing: border-box; 
+  justify-content: center;  
+  align-items: center;
 }
 
-.submit-btn:hover {
-  background-color: #e6b800;
+button[type="submit"]:hover {
+  background-color: #FFD700; 
+  opacity: 0.8;
 }
+
+
+
 
 @media (max-width: 768px) {
   .contact-form {
